--- a/style.css
+++ b/style.css
@@ -3683,8 +3683,8 @@ img#wpstats {
 		margin: 0 10px 10px 0;
 	}
 }
-/* Minimum width of 600 pixels. */
-@media screen and (min-width: 652px) {
+/* Minimum width of 720px pixels. */
+@media screen and (min-width: 720px) {
 	.tiles .tile {
 		width: 50%;
 		float: left;
