--- a/style.css
+++ b/style.css
@@ -363,6 +363,9 @@ img.wp-post-image {
 .big-story-image p {
 	margin: 10px 0;
 }
+.widget-area a#btkf72hbyy8000000 {
+	display: block!important;
+}
 /* Make sure videos and embeds fit their containers */
 embed,
 iframe,
