--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ img.wp-post-image {
 .big-story-image p {
 	margin: 10px 0;
 }
-.widget-area a#btkf72hbyy8000000 {
+.widget-area #__bs_rotation_63525_181305 a {
 	display: block!important;
 }
 /* Make sure videos and embeds fit their containers */
