--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ img.wp-post-image {
 .big-story-image p {
 	margin: 10px 0;
 }				
-
+div#__bs_rotation_63525_181305,
 div#__bs_rotation_63525_181305 a {
 	display: block!important;
 }
