--- a/style.css
+++ b/style.css
@@ -1424,7 +1424,7 @@ box-shadow: 3px 3px 12px -3px rgba(0,0,0,0.45);
 .mailing-address {
 	width: 100%;
 	padding: 30px 0 40px 0;
-	text-align: center;
+	/*text-align: center;*/
 }
 .mailing-address h2 {
 	font-size: 26px;
