--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1049,182 +1049,375 @@ html.pum-open.pum-open-overlay.pum-open-scrollable body > .ui-datepicker[aria-hi
 	width: 100%;
 	display: block;
 }
-.jobs-banner{
-	padding: 30px;
+.jobs-banner {
+	// padding: 30px;
 	text-align: center;
 	color: white;
 	position: relative;
 	/*display: flex;
 	flex-direction: colomn;
 	justify-content: flex-end;*/
+	img {
+		width: 100%;
+	}
+	.banner-info {
+		width: 100%;
+		padding: 10px 0;
+	}
+	&:before {
+		content: "";
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0,0,0,.5);
+	}
+	.background{
+		background-size: cover;
+		background-position: center;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 0;
+		width: 100%;
+		height: 100%;
+	}
+	.row-1 {
+		font-size: 20px;
+		em {
+			font-size: 18px;
+		}
+	}
+	.statistics {
+		margin: 24px 0 0 0;
+		ul {
+			margin: 0;
+			padding: 0;
+		}
+		li {
+			display: block;
+			font-size: 18px;
+			list-style-type: none;
+			margin: 10px 0 0 0;
+		}
+	}
+	.row-2 {
+		// margin: 30px 0 0 0;
+		margin: 0px 0 20px 0;
+		.banner-button {
+			margin: 10px 5px 0 5px;
+			color: #803F26;
+			background-color: white;
+			padding: 10px 20px;
+			text-transform: uppercase;
+			font-size: 16px;
+			display: inline-block;
+			cursor: pointer;
+			position: relative;
+			ul {
+				display: none;
+				li {
+					list-style-type: none;
+					display: block;
+					background-color: white;
+					a {
+						color: #803F26;
+						text-decoration: none;
+						display: block;
+						padding: 10px;
+						text-align: center;
+						font-size: 18px;
+					}
+				}
+			}
+			&:hover ul {
+				width: 250px;
+				box-sizing: border-box;
+				display: block;
+				position: absolute;
+				top: 100%;
+				left: 0;
+				-webkit-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+				-moz-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+				box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+				z-index: 100;
+				border-bottom: 3px solid #803F26;
+			}
+		}
+	}
+	.row-3 {
+		// margin: 30px 0 0 0;
+		form >.row-1 {
+			display: table;
+			margin: 0 auto;
+		}
+	}
+	.row-3 .banner-button {
+		margin: 10px 5px 0 5px;
+		color: #803F26;
+		background-color: white;
+		padding: 10px 20px;
+		text-transform: uppercase;
+		font-size: 20px;
+		display: inline-block;
+		cursor: pointer;
+		position: relative;
+	}
 }
-.jobs-banner:before {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,.5);
-}
-.jobs-banner .background{
-	background-size: cover;
-	background-position: center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 0;
-	width: 100%;
-	height: 100%;
-}
-.jobs-banner >.row-1 {
-	font-size: 20px;
-}
-.jobs-banner >.row-1 em {
-	font-size: 18px;
-}
-.jobs-banner .statistics {
-	margin: 24px 0 0 0;
-}
-.jobs-banner .statistics ul {
-	margin: 0;
-	padding: 0;
-}
-.jobs-banner .statistics li {
-	display: block;
-	font-size: 18px;
-	list-style-type: none;
-	margin: 10px 0 0 0;
-}
-.jobs-banner >.row-2 {
-	margin: 30px 0 0 0;
-}
-.jobs-banner >.row-2 .banner-button {
-	margin: 10px 5px 0 5px;
-	color: #803F26;
-	background-color: white;
-	padding: 10px 20px;
-	text-transform: uppercase;
-	font-size: 16px;
-	display: inline-block;
-	cursor: pointer;
-	position: relative;
-}
-.jobs-banner >.row-3 .banner-button {
-	margin: 10px 5px 0 5px;
-	color: #803F26;
-	background-color: white;
-	padding: 10px 20px;
-	text-transform: uppercase;
-	font-size: 20px;
-	display: inline-block;
-	cursor: pointer;
-	position: relative;
-}
+// .jobs-banner:before {
+// 	content: "";
+// 	display: block;
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	z-index: -1;
+// 	width: 100%;
+// 	height: 100%;
+// 	background-color: rgba(0,0,0,.5);
+// }
+// .jobs-banner .background{
+// 	background-size: cover;
+// 	background-position: center;
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	z-index: 0;
+// 	width: 100%;
+// 	height: 100%;
+// }
+// .jobs-banner >.row-1 {
+// 	font-size: 20px;
+// }
+// .jobs-banner >.row-1 em {
+// 	font-size: 18px;
+// }
+// .jobs-banner .statistics {
+// 	margin: 24px 0 0 0;
+// }
+// .jobs-banner .statistics ul {
+// 	margin: 0;
+// 	padding: 0;
+// }
+// .jobs-banner .statistics li {
+// 	display: block;
+// 	font-size: 18px;
+// 	list-style-type: none;
+// 	margin: 10px 0 0 0;
+// }
+// .jobs-banner >.row-2 {
+// 	margin: 30px 0 0 0;
+// }
+// .jobs-banner >.row-2 .banner-button {
+// 	margin: 10px 5px 0 5px;
+// 	color: #803F26;
+// 	background-color: white;
+// 	padding: 10px 20px;
+// 	text-transform: uppercase;
+// 	font-size: 16px;
+// 	display: inline-block;
+// 	cursor: pointer;
+// 	position: relative;
+// }
+// .jobs-banner >.row-3 .banner-button {
+// 	margin: 10px 5px 0 5px;
+// 	color: #803F26;
+// 	background-color: white;
+// 	padding: 10px 20px;
+// 	text-transform: uppercase;
+// 	font-size: 20px;
+// 	display: inline-block;
+// 	cursor: pointer;
+// 	position: relative;
+// }
 .event-cat-button {
 	position: relative;
 	box-sizing: border-box;
+	a {border: none;}
+	ul {
+		display: none;
+		li {
+			list-style-type: none;
+			display: block;
+			background-color: white;
+			a {
+				color: #803F26;
+				text-decoration: none;
+				display: block;
+				padding: 10px;
+				text-align: center;
+				font-size: 18px;
+			}
+		}
+	}
+	&:hover ul {
+		width: 100%;
+		box-sizing: border-box;
+		display: block;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		-webkit-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+		-moz-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+		box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+		z-index: 100;
+		border-bottom: 3px solid #803F26;
+	}
 }
-.event-cat-button a {
-	border: none;
-}
-.jobs-banner >.row-2 .banner-button ul, .event-cat-button ul {
-	display: none;
-}
-.jobs-banner >.row-2 .banner-button:hover ul, .event-cat-button:hover ul {
-	box-sizing: border-box;
-	display: block;
-	position: absolute;
-	top: 100%;
-	left: 0;
-	-webkit-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
--moz-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
-	z-index: 100;
-	border-bottom: 3px solid #803F26;
-}
-.jobs-banner >.row-2 .banner-button:hover ul {
-	width: 250px;
-}
-.event-cat-button:hover ul {
-	width: 100%;
-}
-.jobs-banner >.row-2 .banner-button ul li, .event-cat-button ul li {
-	list-style-type: none;
-	display: block;
-	background-color: white;
-}
-.jobs-banner >.row-2 .banner-button ul li a, .event-cat-button ul li a {
-	color: #803F26;
-	text-decoration: none;
-	display: block;
-	padding: 10px;
-	text-align: center;
-	font-size: 18px;
-}
-.jobs-banner >.row-3 {
-	margin: 30px 0 0 0;
-}
-.jobs-banner >.row-3 form >.row-1 {
-	display: table;
-	margin: 0 auto;
-}
-.jobs-banner >.row-3 form >.row-1 input {
-	background-color: white;
-	color: black;
-	float: left;
-	font-size: 18px;
-	width: calc(100% - 32px);
-	box-sizing: border-box;
-}
-.jobs-banner >.row-3 form >.row-1 button {
-	box-sizing: border-box;
-	background-color: black;
-	color: white;
-	width: 32px;
-	font-size: 18px;
-	border: 1px solid white;
-	float: left;
-}
-.jobs-banner >.row-3 form >.row-2 {
-	margin: 20px 0 0 0;
-}
-.jobs-banner >.row-3 form >.row-3 {
-	margin: 10px 0 0 0;
-}
-.jobs-banner >.row-3 form >.row-2, .jobs-banner >.row-3 form >.row-3 {
+// .event-cat-button {
+	
+// }
+// .jobs-banner >.row-2 .banner-button ul, .event-cat-button ul {
+// 	display: none;
+// }
+// .jobs-banner >.row-2 .banner-button:hover ul, .event-cat-button:hover ul {
+// 	box-sizing: border-box;
+// 	display: block;
+// 	position: absolute;
+// 	top: 100%;
+// 	left: 0;
+// 	-webkit-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+// 	-moz-box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+// 	box-shadow: 2px 2px 11px 0px rgba(0,0,0,0.37);
+// 	z-index: 100;
+// 	border-bottom: 3px solid #803F26;
+// }
+// .jobs-banner >.row-2 .banner-button:hover ul {
+// 	width: 250px;
+// }
+// .event-cat-button:hover ul {
+// 	width: 100%;
+// }
+// .jobs-banner >.row-2 .banner-button ul li, .event-cat-button ul li {
+// 	list-style-type: none;
+// 	display: block;
+// 	background-color: white;
+// }
+// .jobs-banner >.row-2 .banner-button ul li a, .event-cat-button ul li a {
+// 	color: #803F26;
+// 	text-decoration: none;
+// 	display: block;
+// 	padding: 10px;
+// 	text-align: center;
+// 	font-size: 18px;
+// }
+// .jobs-banner >.row-3 {
+// 	margin: 30px 0 0 0;
+// }
+// .jobs-banner >.row-3 form >.row-1 {
+// 	display: table;
+// 	margin: 0 auto;
+// }
+.jobs-banner {
+	.row-3 {
+		form >.row-1 input {
+			background-color: white;
+			color: black;
+			float: left;
+			font-size: 18px;
+			width: calc(100% - 32px);
+			box-sizing: border-box;
+		}
+		form >.row-1 button {
+			box-sizing: border-box;
+			background-color: black;
+			color: white;
+			width: 32px;
+			font-size: 18px;
+			border: 1px solid white;
+			float: left;
+		}
+		form >.row-2 {
+			margin: 20px 0 0 0;
+		}
+		form >.row-3 {
+			// margin: 10px 0 0 0;
+		}
+	}
+	.row-3 form >.row-2 ul li, .row-3 form >.row-3 ul li {
+		list-style-type: none;
+		font-size: 18px;
+		margin: 5px 0 0 0;
+		input {
+			border: 1px solid white;
+			background: none;
+			box-shadow: none;
+			text-shadow: none;
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+			border-radius: 50%;
+			width: 12px;
+			height: 12px;
+			vertical-align: middle;
+			margin: 0 5px 0 0;
+			&:checked {
+				border: 6px solid white;
+			}
+		}
+		label {
+			font-size: 18px;
+			vertical-align: middle;
+		}
+	}
 	
 }
-.jobs-banner >.row-3 form >.row-2 ul, .jobs-banner >.row-3 form >.row-3 ul {
-}
-.jobs-banner >.row-3 form >.row-2 ul li, .jobs-banner >.row-3 form >.row-3 ul li {
-	list-style-type: none;
-	font-size: 18px;
-	margin: 5px 0 0 0;
-}
-.jobs-banner >.row-3 form >.row-2 ul li input, .jobs-banner >.row-3 form >.row-3 ul li input {
-	border: 1px solid white;
-	background: none;
-	box-shadow: none;
-	text-shadow: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	border-radius: 50%;
-	width: 12px;
-	height: 12px;
-	vertical-align: middle;
-	margin: 0 5px 0 0;
-}
-.jobs-banner >.row-3 form >.row-2 ul li input:checked, .jobs-banner >.row-3 form >.row-3 ul li input:checked {
-	border: 6px solid white;
-}
-.jobs-banner >.row-3 form >.row-2 ul li label, .jobs-banner >.row-3 form >.row-3 ul li label {
-	font-size: 18px;
-	vertical-align: middle;
-}
+// .jobs-banner >.row-3 form >.row-1 input {
+// 	background-color: white;
+// 	color: black;
+// 	float: left;
+// 	font-size: 18px;
+// 	width: calc(100% - 32px);
+// 	box-sizing: border-box;
+// }
+// .jobs-banner >.row-3 form >.row-1 button {
+// 	box-sizing: border-box;
+// 	background-color: black;
+// 	color: white;
+// 	width: 32px;
+// 	font-size: 18px;
+// 	border: 1px solid white;
+// 	float: left;
+// }
+// .jobs-banner >.row-3 form >.row-2 {
+// 	margin: 20px 0 0 0;
+// }
+// .jobs-banner >.row-3 form >.row-3 {
+// 	margin: 10px 0 0 0;
+// }
+// .jobs-banner >.row-3 form >.row-2, .jobs-banner >.row-3 form >.row-3 {
+	
+// }
+// .jobs-banner >.row-3 form >.row-2 ul, .jobs-banner >.row-3 form >.row-3 ul {
+// }
+// .jobs-banner >.row-3 form >.row-2 ul li, .jobs-banner >.row-3 form >.row-3 ul li {
+// 	list-style-type: none;
+// 	font-size: 18px;
+// 	margin: 5px 0 0 0;
+// }
+// .jobs-banner >.row-3 form >.row-2 ul li input, .jobs-banner >.row-3 form >.row-3 ul li input {
+// 	border: 1px solid white;
+// 	background: none;
+// 	box-shadow: none;
+// 	text-shadow: none;
+// 	-webkit-appearance: none;
+// 	-moz-appearance: none;
+// 	appearance: none;
+// 	border-radius: 50%;
+// 	width: 12px;
+// 	height: 12px;
+// 	vertical-align: middle;
+// 	margin: 0 5px 0 0;
+// }
+// .jobs-banner >.row-3 form >.row-2 ul li input:checked, .jobs-banner >.row-3 form >.row-3 ul li input:checked {
+// 	border: 6px solid white;
+// }
+// .jobs-banner >.row-3 form >.row-2 ul li label, .jobs-banner >.row-3 form >.row-3 ul li label {
+// 	font-size: 18px;
+// 	vertical-align: middle;
+// }
 .below-banner {
 	background-color: #e8e8e8;
 	text-align: center;
@@ -3862,79 +4055,157 @@ img#wpstats {
 	}
 	/*==============JOB BOARD PAGE ===============*/
 	.jobs-banner{
-		padding:  25% 5% 2% 5%;
+		// padding:  25% 5% 2% 5%;
+		padding:  0%;
+		img {
+			width: 100%;
+		}
+		.banner-info {
+			width: 100%;
+			position: absolute;
+			bottom: 20px;
+			left: 0;
+		}
+		.row-1 {
+			font-size: 35px;
+			width: 80%;
+			margin: 0 auto;
+			position: relative;
+		}
+		.statistics {
+			margin: 55px auto 0 auto;
+			width: 70%;
+			li {
+				font-size: 25px;
+			}
+		}
+		.row-2 {
+			margin: 40px auto 0 auto;
+			width: 80%;
+			.banner-button ul li a {
+				font-size: 14px;
+			}
+		}
+		.row-3 {
+			margin: 30px auto 0 auto;
+			width: 80%;
+			position: relative;
+			form >.row-1 {
+				display: table;
+				margin: 0 auto;
+				max-width: 500px;
+				width: 50%;
+				input {
+					background-color: white;
+					color: black;
+					float: left;
+					font-size: 18px;
+					width: calc(100% - 32px);
+					box-sizing: border-box;
+				}
+				button {
+					box-sizing: border-box;
+					background-color: black;
+					color: white;
+					width: 32px;
+					font-size: 18px;
+					border: 1px solid white;
+					float: left;
+				}
+			}
+			form >.row-2 {
+				margin: 10px 0 0 0;
+			}
+			form >.row-3 {
+				// margin: 0;
+			}
+			form >.row-2 ul li, form >.row-3 ul li {
+				list-style-type: none;
+				font-size: 18px;
+				margin: 10px 10px 0 10px;
+				display: inline-block;
+			}
+			form >.row-2 ul li label, form >.row-3 ul li label {
+				font-size: 18px;
+			}
+		}
+
 	}
-	.jobs-banner >.row-1 {
-		font-size: 35px;
-		width: 80%;
-		margin: 0 auto;
-	}
-	.jobs-banner .statistics {
-		margin: 55px auto 0 auto;
-		width: 70%;
-	}
-	.jobs-banner .statistics li {
-		font-size: 25px;
-	}
-	.jobs-banner >.row-2 {
-		margin: 40px auto 0 auto;
-		width: 80%;
-	}
-	.jobs-banner >.row-2 .banner-button {
-		font-size: 18px;
-	}
-	.jobs-banner >.row-3 {
-		margin: 30px auto 0 auto;
-		width: 80%;
-	}
-	.jobs-banner >.row-3 form >.row-1 {
-		display: table;
-		margin: 0 auto;
-		max-width: 500px;
-		width: 50%;
-	}
-	.jobs-banner >.row-3 form >.row-1 input {
-		background-color: white;
-		color: black;
-		float: left;
-		font-size: 18px;
-		width: calc(100% - 32px);
-		box-sizing: border-box;
-	}
-	.jobs-banner >.row-3 form >.row-1 button {
-		box-sizing: border-box;
-		background-color: black;
-		color: white;
-		width: 32px;
-		font-size: 18px;
-		border: 1px solid white;
-		float: left;
-	}
-	.jobs-banner >.row-3 form >.row-2 {
-		margin: 10px 0 0 0;
-	}
-	.jobs-banner >.row-3 form >.row-3 {
-		margin: 0;
-	}
-	.jobs-banner >.row-3 form >.row-2, .jobs-banner >.row-3 form >.row-3 {
+	// .jobs-banner >.row-3 form >.row-2 ul li, .jobs-banner >.row-3 form >.row-3 ul li {
+	// 	list-style-type: none;
+	// 	font-size: 18px;
+	// 	margin: 10px 10px 0 10px;
+	// 	display: inline-block;
+	// }
+	// .jobs-banner >.row-2 .banner-button ul li a {
+	// 	font-size: 14px;
+	// }
+	// .jobs-banner >.row-3 form >.row-2 ul li input, .jobs-banner >.row-3 form >.row-3 ul li input {
+	// }
+	// .jobs-banner >.row-3 form >.row-2 ul li label, .jobs-banner >.row-3 form >.row-3 ul li label {
+	// 	font-size: 18px;
+	// }
+
+	// .jobs-banner >.row-1 {
+	// 	font-size: 35px;
+	// 	width: 80%;
+	// 	margin: 0 auto;
+	// 	position: relative;
+	// }
+	// .jobs-banner .statistics {
+	// 	margin: 55px auto 0 auto;
+	// 	width: 70%;
+	// }
+	// .jobs-banner .statistics li {
+	// 	font-size: 25px;
+	// }
+	// .jobs-banner >.row-2 {
+	// 	margin: 40px auto 0 auto;
+	// 	width: 80%;
+	// }
+	// .jobs-banner >.row-2 .banner-button {
+	// 	font-size: 18px;
+	// }
+	// .jobs-banner >.row-3 {
+	// 	margin: 30px auto 0 auto;
+	// 	width: 80%;
+	// 	position: relative;
+	// }
+	// .jobs-banner >.row-3 form >.row-1 {
+	// 	display: table;
+	// 	margin: 0 auto;
+	// 	max-width: 500px;
+	// 	width: 50%;
+	// }
+	// .jobs-banner >.row-3 form >.row-1 input {
+	// 	background-color: white;
+	// 	color: black;
+	// 	float: left;
+	// 	font-size: 18px;
+	// 	width: calc(100% - 32px);
+	// 	box-sizing: border-box;
+	// }
+	// .jobs-banner >.row-3 form >.row-1 button {
+	// 	box-sizing: border-box;
+	// 	background-color: black;
+	// 	color: white;
+	// 	width: 32px;
+	// 	font-size: 18px;
+	// 	border: 1px solid white;
+	// 	float: left;
+	// }
+	// .jobs-banner >.row-3 form >.row-2 {
+	// 	margin: 10px 0 0 0;
+	// }
+	// .jobs-banner >.row-3 form >.row-3 {
+	// 	margin: 0;
+	// }
+	// .jobs-banner >.row-3 form >.row-2, .jobs-banner >.row-3 form >.row-3 {
 		
-	}
-	.jobs-banner >.row-3 form >.row-2 ul, .jobs-banner >.row-3 form >.row-3 ul {
-	}
-	.jobs-banner >.row-3 form >.row-2 ul li, .jobs-banner >.row-3 form >.row-3 ul li {
-		list-style-type: none;
-		font-size: 18px;
-		margin: 10px 10px 0 10px;
-		display: inline-block;
-	}
-	.jobs-banner >.row-2 .banner-button ul li a {
-		font-size: 14px;
-	}
-	.jobs-banner >.row-3 form >.row-2 ul li input, .jobs-banner >.row-3 form >.row-3 ul li input {
-	}
-	.jobs-banner >.row-3 form >.row-2 ul li label, .jobs-banner >.row-3 form >.row-3 ul li label {
-		font-size: 18px;
-	}
+	// }
+	// .jobs-banner >.row-3 form >.row-2 ul, .jobs-banner >.row-3 form >.row-3 ul {
+	// }
+	
 	/* ===========SINGLE JOB=========================*/
 	.single-job {
 
