--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3381,7 +3381,8 @@ article.sticky .featured-post {
 .comment-content h6 {
 	margin: 0px 0 24px 0;
 	line-height: 1.714285714;
-	width: auto;
+	// width: auto;
+	width: 100%;
 	display: inline-block;
 }
 body.single .entry-content h1 {
