--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -1,3 +1,11 @@
+#div-gpt-ad-1563293411913-0 {
+	width: 300px;
+	height: 37px;
+	@media screen and (min-width: $tabwidth) {
+		width: 728px;
+		height: 90px;
+	}
+}
 .sticky {
 	display: block;
 }
