--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -50,6 +50,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 body {
 	line-height: 1;
+	    width: 100%;
+    position: relative;
+    clear: both;
 }
 ol,
 ul {
@@ -833,6 +836,10 @@ h3.search-header, .header-date {
 	font-family: 'Oswald', sans-serif;
 	font-size:18px;
 	margin: 8px auto;
+}
+.site-header {
+	// width: 100%;
+	// position: relative;
 }
 /* Assistive text */
 .assistive-text,
